--- a/index.html
+++ b/index.html
@@ -1,29 +1,59 @@
-<html>
-  <head>
+<html><head>
     <title>Benji's Universe</title>
-    <link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet'>
+    <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
     <style>
       body {
         background-image: url(https://www.hdwallpapers.in/download/blue_stars_space_sky_background_4k_5k_hd_space-3840x2160.jpg);
         background-size: cover;
-        font-color: #ffffff;
         font-family: 'Montserrat';
       }
       .footer {
         position: absolute;
-        bottom: 10px;
+        bottom: 0;
+        text-align: center;
+        left: 0;
+        right: 0;
       }
-    </style>
-  </head>
+      text {
+        color: #ffffff
+      }
+      .mainContainer {
+        margin: 0;
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        -ms-transform: translate(-50%, -50%);
+        transform: translate(-50%, -50%);
+        background-color: rgba(0, 0, 0, 0.5);
+        padding: 20px;
+        border-radius: 10px;
+      }
+      buttn {
+        background-color: black;
+        border-radius: 10px;
+        color: white;
+        padding: 10px;
+      }
+      br {
+        padding: 30px;
+      }
+</style></head>
   <body>
     <center>
-      <div id="main_container">
-        <h1>Welcome!</h1>
-        <h4>This is my bio site! Here's some stuff you can do.</h4>
-        <hr>
-        <a href="https://www.youtube.com/watch?v=elaSoKe1gFw&t=1474s"><button>What I'm probably listening to right now</button></a>
+      <div class="mainContainer">
+        <text><h1 class="text">Welcome!</h1></text>
+        <text><h4 class="text">This is my bio site! Here's some stuff you can do.</h4></text>
+        <a href="https://www.youtube.com/watch?v=elaSoKe1gFw&amp;t=1474s"><buttn>What I'm probably listening to right now</buttn></a>
+        <br>
+        <br>
+        <br>
+        <a href="https://benpi88.github.io"><buttn>My ugly other site</buttn></a>
+        <br>
+        <br>
+        <br>
+        <a href="https://github.com/BenPI88"><buttn>My GitHub</buttn></a>
       </div>
-      <h6 id="footer">Powered by stupidity</h6>
+      <text><h6 class="footer" class="text">Powered by stupidity</h6></text>
     </center>
-  </body>
-</html>
+  
+</body></html>
