--- a/index.html
+++ b/index.html
@@ -52,6 +52,10 @@
         <br>
         <br>
         <a href="https://github.com/BenPI88"><buttn>My GitHub</buttn></a>
+        <br>
+        <br>
+        <br>
+        <a href="https://www.youtube.com/watch?v=jLew3Dd3IBA"><buttn>Some random video (updated weekly)</buttn></a>
       </div>
       <text><h6 class="footer" class="text">Powered by stupidity</h6></text>
     </center>
