--- a/index.html
+++ b/index.html
@@ -55,6 +55,10 @@
         <br>
         <br>
         <br>
+        <a href="/characters"><buttn>CURRENT PROJECT - DiscoCharacters</buttn></a>
+        <br>
+        <br>
+        <br>
         <a href="https://www.youtube.com/watch?v=jLew3Dd3IBA"><buttn>Some random video (updated weekly)</buttn></a>
       </div>
       <text><h6 class="footer" class="text">Powered by stupidity</h6></text>
