--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         <br>
         <br>
         <br>
-        <a href="https://www.youtube.com/watch?v=jLew3Dd3IBA"><buttn>Some random video (updated weekly)</buttn></a>
+        <a href="https://www.youtube.com/watch?v=jpPfCLjFVyo"><buttn>Some random video (updated whenever i feel like it)</buttn></a>
       </div>
       <text><h6 class="footer" class="text">Powered by stupidity</h6></text>
     </center>
