--- a/index.html
+++ b/index.html
@@ -1,6 +1,16 @@
 <html><head>
     <title>Benji's Universe</title>
     <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
+    <script src="https://npmcdn.com/spotifyCurrentlyPlaying.js/dist/spotifyCurrentlyPlaying.min.js"></script>
+    <script>
+        SCP({
+    selector: '#spotify-widget',
+    username: 'itzBenPlaiz',
+    api_key: '905aec908bc7eb336346ef60f170f28b',
+    width: '100%',
+    height: '370'
+});
+    </script>
     <style>
       body {
         background-image: url(https://www.hdwallpapers.in/download/blue_stars_space_sky_background_4k_5k_hd_space-3840x2160.jpg);
@@ -60,6 +70,10 @@
         <br>
         <br>
         <a href="https://www.youtube.com/watch?v=jpPfCLjFVyo"><buttn>Some random video (updated whenever i feel like it)</buttn></a>
+        <br>
+        <br>
+        <br>
+        <div id="spotify-widget"></div>
       </div>
       <text><h6 class="footer" class="text">Powered by stupidity</h6></text>
     </center>
