--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         right: 0;
       }
       text {
-        color: #ffffff
+        color: #000000
       }
       .mainContainer {
         margin: 0;
@@ -24,14 +24,14 @@
         left: 50%;
         -ms-transform: translate(-50%, -50%);
         transform: translate(-50%, -50%);
-        background-color: rgba(0, 0, 0, 0.5);
+        background-color: rgba(255, 200, 200, 0.5);
         padding: 20px;
         border-radius: 10px;
       }
       buttn {
-        background-color: black;
+        background-color: white;
         border-radius: 10px;
-        color: white;
+        color: black;
         padding: 10px;
       }
       br {
