--- a/banana/index.html
+++ b/banana/index.html
@@ -63,7 +63,11 @@
     <style>
     .slideshow-container {
       max-width: 1000px;
-      position: relative;
+      position: absolute;
       margin: auto;
+      top: 50%;
+      left: 50%;
+      -ms-transform: translate(-50%, -50%);
+      transform: translate(-50%, -50%);
     }
     </style>
