--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html><head>
     <title>Benji's Universe</title>
     <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/07e379ee62.js" crossorigin="anonymous"></script>
     <style>
       body {
         background-image: url(https://github.com/bp88dev/bp88dev.github.io/blob/main/alleyway.jpg?raw=true);
@@ -18,6 +19,17 @@
         color: #000000
       }
       .mainContainer {
+        margin: 0;
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        -ms-transform: translate(-50%, -50%);
+        transform: translate(-50%, -50%);
+        background-color: rgba(255, 200, 200, 0.5);
+        padding: 20px;
+        border-radius: 10px;
+      }
+      .container {
         margin: 0;
         position: absolute;
         top: 50%;
@@ -61,7 +73,13 @@
         <br>
         <a href="https://www.youtube.com/watch?v=jpPfCLjFVyo"><buttn>Some random video (updated whenever i feel like it)</buttn></a>
       </div>
-      <text><h6 class="footer" class="text">Powered by stupidity</h6></text>
+      <div class="footer">
+        <div class="container">
+          <a href="https://youtube.com/@itzbenplaiz"><i class="fa-brands fa-youtube"></i></a>
+        </div>
+        <text><h6 class="text">Powered by stupidity</h6></text>
+        <text><h6 class="text">Made with love by Benji. YouTube is a registered trademark of Google LLC.</h6></text>
+      </div>div>
     </center>
   
 </body></html>
