--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
     <title>Benji's Universe</title>
     <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
     <script src="https://kit.fontawesome.com/07e379ee62.js" crossorigin="anonymous"></script>
+</style>
     <style>
       body {
         background-image: url(https://github.com/bp88dev/bp88dev.github.io/blob/main/alleyway.jpg?raw=true);
@@ -49,7 +50,7 @@
       br {
         padding: 30px;
       }
-</style></head>
+</style><style type="text/css"></style></head>
   <body>
     <center>
       <div class="mainContainer">
@@ -74,12 +75,21 @@
         <a href="https://www.youtube.com/watch?v=jpPfCLjFVyo"><buttn>Some random video (updated whenever i feel like it)</buttn></a>
       </div>
       <div class="footer">
-        <div class="container">
-          <a href="https://youtube.com/@itzbenplaiz"><i class="fa-brands fa-youtube"></i></a>
+        
+
+<div class="container">
+          <a href="https://youtube.com/@itzbenplaiz"><i class="fa-brands fa-youtube" aria-hidden="true"></i></a>
+          <a href="https://twitch.tv/realitzbenplaiz"><i class="fa-brands fa-twitch" aria-hidden="true"></i></a>
         </div>
-        <text><h6 class="text">Powered by stupidity</h6></text>
-        <text><h6 class="text">Made with love by Benji. YouTube is a registered trademark of Google LLC.</h6></text>
-      </div>div>
-    </center>
-  
-</body></html>
+        
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<text><h6 class="text">Powered by stupidity</h6></text>
+        <text><h6 class="text">Made with love by Benji. YouTube is a registered trademark of Google LLC. • Twitch is a registered trademark of Amazon.com, Inc.</h6></text>
+      </div></center>
+  </body>
+</html>
