--- a/index.html
+++ b/index.html
@@ -80,6 +80,7 @@
 <div class="container">
           <a href="https://youtube.com/@itzbenplaiz"><i class="fa-brands fa-youtube" aria-hidden="true"></i></a>
           <a href="https://twitch.tv/realitzbenplaiz"><i class="fa-brands fa-twitch" aria-hidden="true"></i></a>
+          <a href="https://discord.gg/CWH3pXus4U"><i class="fa-brands fa-discord" aria-hidden="true"></i></a>
         </div>
         
 <br>
@@ -89,7 +90,7 @@
 <br>
 <br>
 <text><h6 class="text">Powered by stupidity</h6></text>
-        <text><h6 class="text">Made with love by Benji. YouTube is a registered trademark of Google LLC. • Twitch is a registered trademark of Amazon.com, Inc.</h6></text>
+        <text><h6 class="text">Made with love by Benji • YouTube is a registered trademark of Google LLC. • Twitch is a registered trademark of Amazon.com, Inc. • Discord is a registered trademark of Discord Inc.</h6></text>
       </div></center>
   </body>
 </html>
