--- a/index.html
+++ b/index.html
@@ -89,8 +89,7 @@
 <br>
 <br>
 <br>
-<text><h6 class="text">Powered by stupidity</h6></text>
-        <text><h6 class="text">Made with love by Benji • YouTube is a registered trademark of Google LLC. • Twitch is a registered trademark of Amazon.com, Inc. • Discord is a registered trademark of Discord Inc.</h6></text>
+        <text><h6 class="text">Made with stupidity by Benji • YouTube is a registered trademark of Google LLC. • Twitch is a registered trademark of Amazon.com, Inc. • Discord is a registered trademark of Discord Inc.</h6></text>
       </div></center>
   </body>
 </html>
