--- a/index.html
+++ b/index.html
@@ -81,6 +81,7 @@
           <a href="https://youtube.com/@itzbenplaiz"><i class="fa-brands fa-youtube" aria-hidden="true"></i></a>
           <a href="https://twitch.tv/realitzbenplaiz"><i class="fa-brands fa-twitch" aria-hidden="true"></i></a>
           <a href="https://discord.gg/CWH3pXus4U"><i class="fa-brands fa-discord" aria-hidden="true"></i></a>
+          <a href="https://x.com/bp88dev"><i class="fa-brands fa-square-x-twitter" aria-hidden="true"></i></a>
         </div>
         
 <br>
