--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
         <br>
         <br>
         <br>
-        <a href="https://www.youtube.com/watch?v=Eoe5IZHbarQ"><buttn>Who am I? (Watch with lyrics)</buttn></a>
+        <a href="https://www.youtube.com/watch?v=Eoe5IZHbarQ"><buttn>Who am I?</buttn></a>
       </div>
       <div class="footer">
         
