--- a/index.html
+++ b/index.html
@@ -77,6 +77,10 @@
         <br>
         <br>
         <a href="https://www.youtube.com/watch?v=Eoe5IZHbarQ"><buttn>Who am I?</buttn></a>
+        <br>
+        <br>
+        <br>
+        <a href="/bg"><buttn>Backgrounds</buttn></a>
       </div>
       <div class="footer">
         
