--- a/bg/apple/index.html
+++ b/bg/apple/index.html
@@ -56,19 +56,19 @@
       <div class="mainContainer">
         <text><h1 class="text">Apple Backgrounds</h1></text>
         <text><h4 class="text">Here's some backgrounds for apple devices.</h4></text>
-        <a href="/Frame%207.png"><buttn>1</buttn></a>
+        <a href="Frame%207.png"><buttn>1</buttn></a>
         <br>
         <br>
         <br>
-        <a href="/Frame%208.png"><buttn>2</buttn></a>
+        <a href="Frame%208.png"><buttn>2</buttn></a>
         <br>
         <br>
         <br>
-        <a href="/Frame%209.png"><buttn>3</buttn></a>
+        <a href="Frame%209.png"><buttn>3</buttn></a>
         <br>
         <br>
         <br>
-        <a href="/Frame%2010.png"><buttn>4</buttn></a>
+        <a href="Frame%2010.png"><buttn>4</buttn></a>
       </div>
       <div class="footer">
         
