--- a/bg/index.html
+++ b/bg/index.html
@@ -56,11 +56,11 @@
       <div class="mainContainer">
         <text><h1 class="text">Backgrounds</h1></text>
         <text><h4 class="text">Here's some pretty backgrounds.</h4></text>
-        <a href="apple"><buttn>Apple</buttn></a>
+        <a href="/bg/apple"><buttn>Apple</buttn></a>
         <br>
         <br>
         <br>
-        <a href="windows"><buttn>Windows</buttn></a>
+        <a href="/bg/windows"><buttn>Windows</buttn></a>
       </div>
       <div class="footer">
         
