--- a/bg/index.html
+++ b/bg/index.html
@@ -1,5 +1,5 @@
 <html><head>
-    <title>Benji's Universe</title>
+    <title>Backgrounds</title>
     <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
     <script src="https://kit.fontawesome.com/07e379ee62.js" crossorigin="anonymous"></script>
 </style>
