--- a/middleclick/index.html
+++ b/middleclick/index.html
@@ -1,2 +1,2 @@
 <meta http-equiv="Refresh" content="0; url='https://google.com/q=help%20i%20have%20a%20gambling%20addiction'">
-<meta property="og:image" content="https://bp88dev.github.io/mc.png">
+<meta property="og:image" content="https://bp88dev.github.io/middleclick/mc.png">
