--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
       <div class="mainContainer">
         <text><h1 class="text">Welcome!</h1></text>
         <text><h4 class="text">This is my bio site! Here's some stuff you can do.</h4></text>
-        <a href="https://www.youtube.com/watch?v=elaSoKe1gFw&amp;t=1474s"><buttn>What I'm probably listening to right now</buttn></a>
+        <a href="https://music.youtube.com/watch?v=BW5G7v5PqPc&si=nk88LslQOUfoMP_L"><buttn>What I'm probably listening to right now</buttn></a>
         <br>
         <br>
         <br>
@@ -68,7 +68,7 @@
         <br>
         <br>
         <br>
-        <a href="/characters"><buttn>CURRENT PROJECT - DiscoCharacters</buttn></a>
+        <a href="https://discord.gg/kBeXJsBsMP"><buttn>VoteDND</buttn></a>
         <br>
         <br>
         <br>
