--- a/index.html
+++ b/index.html
@@ -90,6 +90,7 @@
           <a href="https://twitch.tv/realitzbenplaiz"><i class="fa-brands fa-twitch" aria-hidden="true"></i></a>
           <a href="https://discord.gg/CWH3pXus4U"><i class="fa-brands fa-discord" aria-hidden="true"></i></a>
           <a href="https://x.com/bp88dev"><i class="fa-brands fa-square-x-twitter" aria-hidden="true"></i></a>
+          <a href="https://bsky.app/profile/bp88dev.bsky.app"><i class="fa-brands fa-bluesky" aria-hidden="true"></i></a>
         </div>
         
 <br>
