--- a/index.html
+++ b/index.html
@@ -60,6 +60,10 @@
         <br>
         <br>
         <br>
+        <a href="https://www.last.fm/user/itzBenPlaiz"><buttn>What I'm DEFINITELY listening to right now</buttn></a>
+        <br>
+        <br>
+        <br>
         <a href="https://benpi88.github.io"><buttn>My ugly other site</buttn></a>
         <br>
         <br>
