[-] "What I'm probably listening to right now" due to it being inaccurate [-] Copyright text in footer [-] VoteDND button [/] Changed coloring to Catppuccin Mocha

--- a/index.html
+++ b/index.html
@@ -2,10 +2,9 @@
     <title>Benji's Universe</title>
     <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
     <script src="https://kit.fontawesome.com/07e379ee62.js" crossorigin="anonymous"></script>
-</style>
     <style>
       body {
-        background-image: url(https://github.com/bp88dev/bp88dev.github.io/blob/main/alleyway.jpg?raw=true);
+        background-color: #11111b;
         background-size: cover;
         font-family: 'Montserrat';
       }
@@ -17,7 +16,7 @@
         right: 0;
       }
       text {
-        color: #000000
+        color: #cdd6f4
       }
       .mainContainer {
         margin: 0;
@@ -26,7 +25,7 @@
         left: 50%;
         -ms-transform: translate(-50%, -50%);
         transform: translate(-50%, -50%);
-        background-color: rgba(255, 200, 200, 0.5);
+        background-color: rgba(49, 50, 68, 0.5);
         padding: 20px;
         border-radius: 10px;
       }
@@ -37,18 +36,21 @@
         left: 50%;
         -ms-transform: translate(-50%, -50%);
         transform: translate(-50%, -50%);
-        background-color: rgba(255, 200, 200, 0.5);
+        background-color: rgba(49, 50, 68, 0.5);
         padding: 20px;
         border-radius: 10px;
       }
       buttn {
-        background-color: white;
+        background-color: #45475a;
         border-radius: 10px;
-        color: black;
+        color: #cdd6f4;
         padding: 10px;
       }
       br {
         padding: 30px;
+      }
+      .icon {
+          color: #6c7086;
       }
 </style><style type="text/css"></style></head>
   <body>
@@ -56,10 +58,6 @@
       <div class="mainContainer">
         <text><h1 class="text">Welcome!</h1></text>
         <text><h4 class="text">This is my bio site! Here's some stuff you can do.</h4></text>
-        <a href="https://music.youtube.com/watch?v=BW5G7v5PqPc&si=nk88LslQOUfoMP_L"><buttn>What I'm probably listening to right now</buttn></a>
-        <br>
-        <br>
-        <br>
         <a href="https://www.last.fm/user/itzBenPlaiz"><buttn>What I'm DEFINITELY listening to right now</buttn></a>
         <br>
         <br>
@@ -69,10 +67,6 @@
         <br>
         <br>
         <a href="https://github.com/BenPI88"><buttn>My GitHub</buttn></a>
-        <br>
-        <br>
-        <br>
-        <a href="https://discord.gg/kBeXJsBsMP"><buttn>VoteDND</buttn></a>
         <br>
         <br>
         <br>
@@ -86,11 +80,11 @@
         
 
 <div class="container">
-          <a href="https://youtube.com/@itzbenplaiz"><i class="fa-brands fa-youtube" aria-hidden="true"></i></a>
-          <a href="https://twitch.tv/realitzbenplaiz"><i class="fa-brands fa-twitch" aria-hidden="true"></i></a>
-          <a href="https://discord.gg/CWH3pXus4U"><i class="fa-brands fa-discord" aria-hidden="true"></i></a>
-          <a href="https://x.com/bp88dev"><i class="fa-brands fa-square-x-twitter" aria-hidden="true"></i></a>
-          <a href="https://bsky.app/profile/bp88dev.bsky.app"><i class="fa-brands fa-bluesky" aria-hidden="true"></i></a>
+          <a href="https://youtube.com/@itzbenplaiz"><i class="fa-brands fa-youtube icon" aria-hidden="true"></i></a>
+          <a href="https://twitch.tv/realitzbenplaiz"><i class="fa-brands fa-twitch icon" aria-hidden="true"></i></a>
+          <a href="https://discord.gg/CWH3pXus4U"><i class="fa-brands fa-discord icon" aria-hidden="true"></i></a>
+          <a href="https://x.com/bp88dev"><i class="fa-brands fa-square-x-twitter icon" aria-hidden="true"></i></a>
+          <a href="https://bsky.app/profile/bp88dev.bsky.app"><i class="fa-brands fa-bluesky icon" aria-hidden="true"></i></a>
         </div>
         
 <br>
@@ -99,7 +93,7 @@
 <br>
 <br>
 <br>
-        <text><h6 class="text">Made with stupidity by Benji • YouTube is a registered trademark of Google LLC. • Twitch is a registered trademark of Amazon.com, Inc. • Discord is a registered trademark of Discord Inc. • X is a registered trademark of X Corp./Twitter, Inc.</h6></text>
+        <text><h6 class="text">Made with stupidity by Benji</h6></text>
       </div></center>
   </body>
 </html>
