[-] "DEFINITELY" in on the last.fm button

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
       <div class="mainContainer">
         <text><h1 class="text">Welcome!</h1></text>
         <text><h4 class="text">This is my bio site! Here's some stuff you can do.</h4></text>
-        <a href="https://www.last.fm/user/itzBenPlaiz"><buttn>What I'm DEFINITELY listening to right now</buttn></a>
+        <a href="https://www.last.fm/user/itzBenPlaiz"><buttn>What I'm listening to right now</buttn></a>
         <br>
         <br>
         <br>
@@ -66,7 +66,7 @@
         <br>
         <br>
         <br>
-        <a href="https://github.com/BenPI88"><buttn>My GitHub</buttn></a>
+        <a href="https://github.com/bp88dev"><buttn>My GitHub</buttn></a>
         <br>
         <br>
         <br>
