[/] Correct Bluesky handle

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
           <a href="https://twitch.tv/realitzbenplaiz"><i class="fa-brands fa-twitch icon" aria-hidden="true"></i></a>
           <a href="https://discord.gg/CWH3pXus4U"><i class="fa-brands fa-discord icon" aria-hidden="true"></i></a>
           <a href="https://x.com/bp88dev"><i class="fa-brands fa-square-x-twitter icon" aria-hidden="true"></i></a>
-          <a href="https://bsky.app/profile/bp88dev.bsky.app"><i class="fa-brands fa-bluesky icon" aria-hidden="true"></i></a>
+          <a href="https://bsky.app/profile/bp88dev.bsky.social"><i class="fa-brands fa-bluesky icon" aria-hidden="true"></i></a>
         </div>
         
 <br>
