[+] Status to /apple-developer

--- a/apple-developer/index.html
+++ b/apple-developer/index.html
@@ -20,7 +20,9 @@
 <body style="background-color: #11111b; font-family: 'Montserrat2', 'Montserrat', serif;">
 <div class="container">
     <p style="color: #a6adc8; margin-bottom: 0; font-weight: 400;">Do I have Apple Developer yet?</p>
-    <h1 style="color: #cdd6f4; margin-top: 0; font-weight: 700;">No.</h1>
+    <h1 style="color: #f38ba8; margin-top: 0; font-weight: 700;">No.</h1>
+    <p style="color: #cdd6f4; margin-bottom: 0; font-weight: 400;">Status:</p>
+    <p style="color: #cdd6f4; margin-bottom: 0; font-weight: 400; margin-top: 0; max-width: 100%">I sent a ticket to Apple Developer support after 48 hours. Awaiting response.</p>
 </div>
 </body>
 </html>
