[+] Footer to /apple-developer

--- a/apple-developer/index.html
+++ b/apple-developer/index.html
@@ -15,6 +15,13 @@
             font-family: "Montserrat2";
             src: url("/Montserrat-VariableFont_wght.ttf");
         }
+        .footer {
+            position: absolute;
+            bottom: 0;
+            text-align: center;
+            left: 0;
+            right: 0;
+        }
     </style>
 </head>
 <body style="background-color: #11111b; font-family: 'Montserrat2', 'Montserrat', serif;">
@@ -23,6 +30,9 @@
     <h1 style="color: #f38ba8; margin-top: 0; font-weight: 700;">No.</h1>
     <p style="color: #cdd6f4; margin-bottom: 0; font-weight: 400;">Status:</p>
     <p style="color: #cdd6f4; margin-bottom: 0; font-weight: 400; margin-top: 0; max-width: 100%">I sent a ticket to Apple Developer support after 48 hours. Awaiting response.</p>
+</div>
+<div class="footer">
+    <h6 style="color: #a6adc8;">Made with spite by Benji/<a href="https://github.com/bp88dev" style="color: #74c7ec">bp88dev</a></h6>
 </div>
 </body>
 </html>
