[+] Update Apple Developer status

--- a/apple-developer/index.html
+++ b/apple-developer/index.html
@@ -29,8 +29,8 @@
     <p style="color: #a6adc8; margin-bottom: 0; font-weight: 400;">Do I have Apple Developer yet?</p>
     <h1 style="color: #f38ba8; margin-top: 0; font-weight: 700;">No.</h1>
     <p style="color: #cdd6f4; margin-bottom: 0; font-weight: 400;">Status:</p>
-    <p style="color: #cdd6f4; margin-bottom: 0; font-weight: 400; margin-top: 0; max-width: 100%">I sent a ticket to Apple Developer support after 48 hours. Awaiting response.</p>
-    <p style="color: #a6adc8; margin-bottom: 0; font-weight: 400; margin-top: 0; max-width: 100%">"We’ll review your message and get back to you within 2 business days."</p>
+    <p style="color: #cdd6f4; margin-bottom: 0; font-weight: 400; margin-top: 0; max-width: 100%">They want me to verify my identity. After 69 hours. Nice.</p>
+    <p style="color: #a6adc8; margin-bottom: 0; font-weight: 400; margin-top: 0; max-width: 100%">"Before we can continue processing your enrollment in the Apple Developer Program, we need a copy of your valid government-issued photo ID."</p>
 </div>
 <div class="footer">
     <h6 style="color: #a6adc8;">Made with spite by Benji/<a href="https://github.com/bp88dev" style="color: #74c7ec">bp88dev</a></h6>
