--- a/apple-developer/index.html
+++ b/apple-developer/index.html
@@ -37,7 +37,7 @@
     <p style="color: #a6adc8; margin-bottom: 0; font-weight: 400;">Do I have Apple Developer yet?</p>
     <h1 style="color: #f38ba8; margin-top: 0; font-weight: 700;">No.</h1>
     <p style="color: #cdd6f4; margin-bottom: 0; font-weight: 400;">Status:</p>
-    <p style="color: #cdd6f4; margin-bottom: 0; font-weight: 400; margin-top: 0; max-width: 100%">They want me to verify my identity. After 69 hours. Nice.</p>
+    <p style="color: #cdd6f4; margin-bottom: 0; font-weight: 400; margin-top: 0; max-width: 100%">I verified my identity.</p>
     <p style="color: #a6adc8; margin-bottom: 0; font-weight: 400; margin-top: 0; max-width: 100%">"Before we can continue processing your enrollment in the Apple Developer Program, we need a copy of your valid government-issued photo ID."</p>
     <fixhr></fixhr>
     <p style="color: #a6adc8; margin-bottom: 0; font-weight: 400; margin-top: 0;">Hours since I paid Apple $100:</p>
